# dci_data_gouvernance

./: .gitignore  README.md  governance.yaml  pyproject.toml  requirements.txt  run.py
src/schema_yaml/: cli.py  governance.py  inspector.py
tests/: test_governance.py  test_inspector.py
