
[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "dci_data_gouvernance"
version = "0.1.0"
description = "Detect file schemas (Polars/Pandas) and output YAML."
requires-python = ">=3.10"
dependencies = [
    "polars>=1.4.0; python_version>='3.10'",
    "pandas>=2.1.0",
    "pyyaml>=6.0.1"
]

[project.scripts]
schema-yaml = "schema_yaml.cli:main"
